# ITCS-4102-Three-Programs

./: LICENSE  README.md  ThreePrograms.cabal  program1.hs  program2.hs  program3.hs
program2/: README.md  edge-detection.cabal  package.yaml  stack.yaml
program2/app/: Main.hs
